--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "styled-components": "^5.2.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
