--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "eslint-plugin-react": "^7.22.0",
     "prettier-eslint": "^12.0.0",
     "react": "^17.0.1",
+    "react-app-rewire-hot-loader": "^2.0.1",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
     "react-loadable": "^5.5.0",
@@ -33,9 +35,9 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
