--- a/api/package.json
+++ b/api/package.json
@@ -1,12 +1,20 @@
 {
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "passport": "^0.4.1",
+    "passport-google-oauth2": "^0.2.0"
   },
   "scripts": {
     "start": "nodemon index.ts"
   },
   "devDependencies": {
-    "@types/express": "^4.17.9"
+    "@types/express": "^4.17.9",
+    "@types/express-session": "^1.17.3",
+    "@types/passport": "^1.0.5",
+    "nodemon": "^2.0.7",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
