--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@testing-library/jest-dom": "^5.11.8",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
-    "@tippyjs/react": "^4.2.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^12.19.12",
     "@types/react": "^16.14.2",
@@ -20,6 +19,7 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
+    "passport-facebook": "^3.0.0",
     "prettier-eslint": "^12.0.0",
     "react": "^17.0.1",
     "react-app-rewire-hot-loader": "^2.0.1",
@@ -62,6 +62,7 @@
     "@babel/cli": "^7.12.10",
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@types/passport-google-oauth2": "^0.1.3",
     "@types/react-loadable": "^5.5.4",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.7",
